--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Israel Store - BloxShop Style</title>
+<title>Israel Store - Estilo Vermelho e Preto</title>
 <style>
   *{margin:0; padding:0; box-sizing:border-box;}
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background:#0d3a0d; color:#d1f0d1; min-height:100vh;
+    background:#121212; /* preto escuro */
+    color:#f44336; /* vermelho vibrante */
+    min-height:100vh;
   }
   a {text-decoration:none; color:inherit;}
   header {
     position:fixed; top:0; left:0; right:0;
-    background:#145214; height:60px; display:flex;
+    background:#b71c1c; /* vermelho escuro */
+    height:60px; display:flex;
     align-items:center; padding:0 1.5rem;
-    box-shadow:0 2px 6px rgba(0,0,0,0.7);
+    box-shadow:0 2px 6px rgba(0,0,0,0.9);
     z-index:1000;
   }
   header h1 {
-    color:#a5d6a7; font-weight:900; font-size:1.8rem;
+    color:#ff7961; /* vermelho claro */
+    font-weight:900; font-size:1.8rem;
     user-select:none;
   }
   nav {
@@ -28,17 +31,18 @@
   }
   nav a {
     font-weight:700; margin-left:1.5rem; font-size:1rem;
-    color:#a5d6a7; transition:color 0.3s ease;
+    color:#ff7961;
+    transition:color 0.3s ease;
   }
   nav a:hover {
-    color:#c8e6c9;
+    color:#ffcdd2;
   }
   main {
     padding:80px 1rem 100px;
     max-width:1100px; margin:0 auto;
   }
   h2 {
-    border-bottom:3px solid #4caf50;
+    border-bottom:3px solid #f44336;
     padding-bottom:.3rem; margin-bottom:1rem;
     user-select:none;
   }
@@ -48,8 +52,10 @@
     gap:1.2rem;
   }
   .produto-card {
-    background:#196219; border-radius:10px;
-    overflow:hidden; box-shadow:0 0 12px #0a2a0a;
+    background:#2c2c2c; /* cinza/preto */
+    border-radius:10px;
+    overflow:hidden;
+    box-shadow:0 0 12px #800000;
     display:flex; flex-direction:column;
     transition:transform .2s ease;
   }
@@ -58,10 +64,11 @@
   }
   .produto-card img {
     width:100%; object-fit:cover; height:160px;
-    border-bottom:3px solid #4caf50;
+    border-bottom:3px solid #f44336;
   }
   .produto-info {
-    flex-grow:1; padding:1rem; color:#d0f0d0;
+    flex-grow:1; padding:1rem;
+    color:#ff8a80;
     display:flex; flex-direction:column;
   }
   .produto-info h3 {
@@ -70,23 +77,30 @@
     user-select:none;
   }
   .produto-info .price {
-    font-size:1rem; font-weight:800; color:#aaffaa;
+    font-size:1rem; font-weight:800;
+    color:#ff5252;
     margin-bottom:1rem; user-select:none;
   }
   .produto-info button {
-    margin-top:auto; background:#4caf50; border:none;
-    padding:.7rem; font-weight:900; color:#0b3d0b;
-    border-radius:8px; cursor:pointer;
+    margin-top:auto;
+    background:#f44336;
+    border:none;
+    padding:.7rem;
+    font-weight:900;
+    color:#210000;
+    border-radius:8px;
+    cursor:pointer;
     transition:background .3s ease;
     user-select:none;
   }
   .produto-info button:hover {
-    background:#3c8c3c;
+    background:#d32f2f;
   }
   #cart {
     position:fixed; top:60px; right:0;
     width:320px; max-height:calc(100vh - 60px);
-    background:#145214; box-shadow:-3px 0 15px #0a2a0a;
+    background:#b71c1c;
+    box-shadow:-3px 0 15px #4a0000;
     overflow-y:auto; padding:1rem; z-index:1100;
     transform:translateX(100%);
     transition:transform .3s ease;
@@ -95,7 +109,7 @@
     transform:translateX(0);
   }
   #cart h2 {
-    margin-bottom:1rem; color:#bbf7bb;
+    margin-bottom:1rem; color:#ff8a80;
   }
   #cart ul {
     list-style:none; max-height:60vh; overflow-y:auto;
@@ -103,73 +117,81 @@
   }
   #cart li {
     margin-bottom:1rem; padding-bottom:.5rem;
-    border-bottom:1px solid #2d602d;
+    border-bottom:1px solid #660000;
     display:flex; justify-content:space-between;
     align-items:center;
+    color:#ffcccb;
   }
   #cart li span {
     user-select:none;
   }
   #cart li button.remove {
-    background:#a33; border:none; color:white;
-    font-weight:bold; border-radius:6px;
-    padding:.2rem .5rem; cursor:pointer;
+    background:#7f0000;
+    border:none;
+    color:white;
+    font-weight:bold;
+    border-radius:6px;
+    padding:.2rem .5rem;
+    cursor:pointer;
     user-select:none;
     transition:background .3s ease;
   }
   #cart li button.remove:hover {
-    background:#d55;
+    background:#b30000;
   }
   #cart .total {
     font-weight:800; font-size:1.2rem;
     user-select:none; margin-bottom:1rem;
-    color:#aaffaa;
+    color:#ff8a80;
   }
   #cart button#closeCart {
-    background:#4caf50; border:none;
+    background:#f44336;
+    border:none;
     width:100%; padding:.7rem;
     font-weight:900; border-radius:8px;
-    cursor:pointer; color:#0b3d0b;
+    cursor:pointer; color:#210000;
     user-select:none; transition:background .3s ease;
   }
   #cart button#closeCart:hover {
-    background:#3c8c3c;
+    background:#d32f2f;
   }
   #openCartBtn {
     position:fixed; top:65px; right:10px;
-    background:#4caf50; color:#0b3d0b; border:none;
+    background:#f44336;
+    color:#210000; border:none;
     padding:.7rem 1.1rem; font-weight:900;
     border-radius:8px; cursor:pointer;
     user-select:none; z-index:1200;
-    box-shadow:0 0 10px #3c8c3c;
+    box-shadow:0 0 10px #d32f2f;
   }
   #openCartBtn:hover {
-    background:#3c8c3c;
+    background:#d32f2f;
   }
   #pixPayment {
     margin-top:1rem; text-align:center;
-    color:#aaffaa; user-select:none;
+    color:#ff8a80; user-select:none;
   }
   #pixPayment img {
     margin-top:.7rem; width:150px;
-    border-radius:12px; box-shadow:0 0 12px #0a2a0a;
+    border-radius:12px; box-shadow:0 0 12px #4a0000;
     cursor:pointer;
   }
   #pixPayment .pixKey {
     margin-top:.5rem; font-weight:800; cursor:pointer;
   }
   #pixPayment .pixKey:hover {
-    color:#7ce07c;
+    color:#ff5252;
   }
   #whatsappLink {
     margin-top:.8rem; display:inline-block;
-    background:#25d366; color:white; font-weight:900;
+    background:#b71c1c;
+    color:white; font-weight:900;
     padding:.7rem 1.3rem; border-radius:50px;
     text-align:center; user-select:none;
     transition:background .3s ease;
   }
   #whatsappLink:hover {
-    background:#128c4a;
+    background:#7f0000;
   }
   @media (max-width: 900px) {
     #cart {
@@ -396,5 +418,6 @@
   // Gera o payload Pix no formato simples para QR code
   // Fonte: https://gist.github.com/pix-qr-code-example (simplificado)
   function gerarPayloadPix(chave, valor, descricao) {
-    const formattedValor = Number(valor).toFixed(
-
+    const formattedValor = Number(valor).toFixed(2);
+    // Montagem simples e fixa do payload para QR Pix - use o padrão oficial para produção
+    // Aqui
