--- a/index.html
+++ b/index.html
@@ -3,27 +3,23 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Israel Store - Estilo Vermelho e Preto</title>
+<title>Israel Store - Vendas Blox & Free Fire</title>
 <style>
   *{margin:0; padding:0; box-sizing:border-box;}
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background:#121212; /* preto escuro */
-    color:#f44336; /* vermelho vibrante */
-    min-height:100vh;
+    background:#1a1a1a; color:#f5f5f5; min-height:100vh;
   }
   a {text-decoration:none; color:inherit;}
   header {
     position:fixed; top:0; left:0; right:0;
-    background:#b71c1c; /* vermelho escuro */
-    height:60px; display:flex;
+    background:#b71c1c; height:60px; display:flex;
     align-items:center; padding:0 1.5rem;
-    box-shadow:0 2px 6px rgba(0,0,0,0.9);
+    box-shadow:0 2px 6px rgba(0,0,0,0.8);
     z-index:1000;
   }
   header h1 {
-    color:#ff7961; /* vermelho claro */
-    font-weight:900; font-size:1.8rem;
+    color:#ffcdd2; font-weight:900; font-size:1.8rem;
     user-select:none;
   }
   nav {
@@ -31,18 +27,17 @@
   }
   nav a {
     font-weight:700; margin-left:1.5rem; font-size:1rem;
-    color:#ff7961;
-    transition:color 0.3s ease;
+    color:#ffcdd2; transition:color 0.3s ease;
   }
   nav a:hover {
-    color:#ffcdd2;
+    color:#ef9a9a;
   }
   main {
     padding:80px 1rem 100px;
     max-width:1100px; margin:0 auto;
   }
   h2 {
-    border-bottom:3px solid #f44336;
+    border-bottom:3px solid #ef5350;
     padding-bottom:.3rem; margin-bottom:1rem;
     user-select:none;
   }
@@ -52,10 +47,8 @@
     gap:1.2rem;
   }
   .produto-card {
-    background:#2c2c2c; /* cinza/preto */
-    border-radius:10px;
-    overflow:hidden;
-    box-shadow:0 0 12px #800000;
+    background:#2a2a2a; border-radius:10px;
+    overflow:hidden; box-shadow:0 0 12px #4a0000;
     display:flex; flex-direction:column;
     transition:transform .2s ease;
   }
@@ -64,11 +57,10 @@
   }
   .produto-card img {
     width:100%; object-fit:cover; height:160px;
-    border-bottom:3px solid #f44336;
+    border-bottom:3px solid #ef5350;
   }
   .produto-info {
-    flex-grow:1; padding:1rem;
-    color:#ff8a80;
+    flex-grow:1; padding:1rem; color:#f5f5f5;
     display:flex; flex-direction:column;
   }
   .produto-info h3 {
@@ -77,39 +69,33 @@
     user-select:none;
   }
   .produto-info .price {
-    font-size:1rem; font-weight:800;
-    color:#ff5252;
+    font-size:1rem; font-weight:800; color:#ff8a80;
     margin-bottom:1rem; user-select:none;
   }
   .produto-info button {
-    margin-top:auto;
-    background:#f44336;
-    border:none;
-    padding:.7rem;
-    font-weight:900;
-    color:#210000;
-    border-radius:8px;
-    cursor:pointer;
+    margin-top:auto; background:#b71c1c; border:none;
+    padding:.7rem; font-weight:900; color:#ffcdd2;
+    border-radius:8px; cursor:pointer;
     transition:background .3s ease;
     user-select:none;
   }
   .produto-info button:hover {
-    background:#d32f2f;
+    background:#7f0000;
   }
   #cart {
     position:fixed; top:60px; right:0;
     width:320px; max-height:calc(100vh - 60px);
-    background:#b71c1c;
-    box-shadow:-3px 0 15px #4a0000;
+    background:#b71c1c; box-shadow:-3px 0 15px #4a0000;
     overflow-y:auto; padding:1rem; z-index:1100;
     transform:translateX(100%);
     transition:transform .3s ease;
+    color:#ffcdd2;
   }
   #cart.open {
     transform:translateX(0);
   }
   #cart h2 {
-    margin-bottom:1rem; color:#ff8a80;
+    margin-bottom:1rem; color:#ffc1c1;
   }
   #cart ul {
     list-style:none; max-height:60vh; overflow-y:auto;
@@ -117,27 +103,22 @@
   }
   #cart li {
     margin-bottom:1rem; padding-bottom:.5rem;
-    border-bottom:1px solid #660000;
+    border-bottom:1px solid #7f0000;
     display:flex; justify-content:space-between;
     align-items:center;
-    color:#ffcccb;
   }
   #cart li span {
     user-select:none;
   }
   #cart li button.remove {
-    background:#7f0000;
-    border:none;
-    color:white;
-    font-weight:bold;
-    border-radius:6px;
-    padding:.2rem .5rem;
-    cursor:pointer;
+    background:#a33; border:none; color:white;
+    font-weight:bold; border-radius:6px;
+    padding:.2rem .5rem; cursor:pointer;
     user-select:none;
     transition:background .3s ease;
   }
   #cart li button.remove:hover {
-    background:#b30000;
+    background:#d55;
   }
   #cart .total {
     font-weight:800; font-size:1.2rem;
@@ -145,31 +126,29 @@
     color:#ff8a80;
   }
   #cart button#closeCart {
-    background:#f44336;
-    border:none;
+    background:#b71c1c; border:none;
     width:100%; padding:.7rem;
     font-weight:900; border-radius:8px;
-    cursor:pointer; color:#210000;
+    cursor:pointer; color:#ffcdd2;
     user-select:none; transition:background .3s ease;
   }
   #cart button#closeCart:hover {
-    background:#d32f2f;
+    background:#7f0000;
   }
   #openCartBtn {
     position:fixed; top:65px; right:10px;
-    background:#f44336;
-    color:#210000; border:none;
+    background:#b71c1c; color:#ffcdd2; border:none;
     padding:.7rem 1.1rem; font-weight:900;
     border-radius:8px; cursor:pointer;
     user-select:none; z-index:1200;
-    box-shadow:0 0 10px #d32f2f;
+    box-shadow:0 0 10px #7f0000;
   }
   #openCartBtn:hover {
-    background:#d32f2f;
+    background:#7f0000;
   }
   #pixPayment {
     margin-top:1rem; text-align:center;
-    color:#ff8a80; user-select:none;
+    color:#ffcdd2; user-select:none;
   }
   #pixPayment img {
     margin-top:.7rem; width:150px;
@@ -180,18 +159,17 @@
     margin-top:.5rem; font-weight:800; cursor:pointer;
   }
   #pixPayment .pixKey:hover {
-    color:#ff5252;
+    color:#ffaaaa;
   }
   #whatsappLink {
     margin-top:.8rem; display:inline-block;
-    background:#b71c1c;
-    color:white; font-weight:900;
+    background:#25d366; color:white; font-weight:900;
     padding:.7rem 1.3rem; border-radius:50px;
     text-align:center; user-select:none;
     transition:background .3s ease;
   }
   #whatsappLink:hover {
-    background:#7f0000;
+    background:#128c4a;
   }
   @media (max-width: 900px) {
     #cart {
@@ -415,9 +393,11 @@
     whatsappLink.href = `https://wa.me/5551997097814?text=${mensagem}`;
   }
 
-  // Gera o payload Pix no formato simples para QR code
-  // Fonte: https://gist.github.com/pix-qr-code-example (simplificado)
+  // Função para montar o payload Pix básico para gerar QR Code
   function gerarPayloadPix(chave, valor, descricao) {
-    const formattedValor = Number(valor).toFixed(2);
-    // Montagem simples e fixa do payload para QR Pix - use o padrão oficial para produção
-    // Aqui
+    function campo(id, valor) {
+      return id + String(valor.length).padStart(2, '0') + valor;
+    }
+    const merchantAccountInfo = campo('00', 'BR.GOV.BCB.PIX') + campo('01', chave);
+    let payload = '';
+    payload += campo('00
