--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Israel Store - Vendas Blox & Free Fire</title>
+<title>Israel Store - Vermelho & Preto</title>
 <style>
   *{margin:0; padding:0; box-sizing:border-box;}
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background:#1a1a1a; color:#f5f5f5; min-height:100vh;
+    background:#1a0a0a; 
+    color:#f44336;
+    min-height:100vh;
   }
   a {text-decoration:none; color:inherit;}
   header {
@@ -19,7 +21,7 @@
     z-index:1000;
   }
   header h1 {
-    color:#ffcdd2; font-weight:900; font-size:1.8rem;
+    color:#ff7961; font-weight:900; font-size:1.8rem;
     user-select:none;
   }
   nav {
@@ -27,17 +29,17 @@
   }
   nav a {
     font-weight:700; margin-left:1.5rem; font-size:1rem;
-    color:#ffcdd2; transition:color 0.3s ease;
+    color:#ff8a80; transition:color 0.3s ease;
   }
   nav a:hover {
-    color:#ef9a9a;
+    color:#ff5252;
   }
   main {
     padding:80px 1rem 100px;
     max-width:1100px; margin:0 auto;
   }
   h2 {
-    border-bottom:3px solid #ef5350;
+    border-bottom:3px solid #d32f2f;
     padding-bottom:.3rem; margin-bottom:1rem;
     user-select:none;
   }
@@ -47,8 +49,8 @@
     gap:1.2rem;
   }
   .produto-card {
-    background:#2a2a2a; border-radius:10px;
-    overflow:hidden; box-shadow:0 0 12px #4a0000;
+    background:#330000; border-radius:10px;
+    overflow:hidden; box-shadow:0 0 12px #200000;
     display:flex; flex-direction:column;
     transition:transform .2s ease;
   }
@@ -57,10 +59,10 @@
   }
   .produto-card img {
     width:100%; object-fit:cover; height:160px;
-    border-bottom:3px solid #ef5350;
+    border-bottom:3px solid #d32f2f;
   }
   .produto-info {
-    flex-grow:1; padding:1rem; color:#f5f5f5;
+    flex-grow:1; padding:1rem; color:#ffcccb;
     display:flex; flex-direction:column;
   }
   .produto-info h3 {
@@ -73,29 +75,28 @@
     margin-bottom:1rem; user-select:none;
   }
   .produto-info button {
-    margin-top:auto; background:#b71c1c; border:none;
-    padding:.7rem; font-weight:900; color:#ffcdd2;
+    margin-top:auto; background:#d32f2f; border:none;
+    padding:.7rem; font-weight:900; color:#330000;
     border-radius:8px; cursor:pointer;
     transition:background .3s ease;
     user-select:none;
   }
   .produto-info button:hover {
-    background:#7f0000;
+    background:#b71c1c;
   }
   #cart {
     position:fixed; top:60px; right:0;
     width:320px; max-height:calc(100vh - 60px);
-    background:#b71c1c; box-shadow:-3px 0 15px #4a0000;
+    background:#b71c1c; box-shadow:-3px 0 15px #200000;
     overflow-y:auto; padding:1rem; z-index:1100;
     transform:translateX(100%);
     transition:transform .3s ease;
-    color:#ffcdd2;
   }
   #cart.open {
     transform:translateX(0);
   }
   #cart h2 {
-    margin-bottom:1rem; color:#ffc1c1;
+    margin-bottom:1rem; color:#ff8a80;
   }
   #cart ul {
     list-style:none; max-height:60vh; overflow-y:auto;
@@ -103,7 +104,7 @@
   }
   #cart li {
     margin-bottom:1rem; padding-bottom:.5rem;
-    border-bottom:1px solid #7f0000;
+    border-bottom:1px solid #5c0000;
     display:flex; justify-content:space-between;
     align-items:center;
   }
@@ -111,14 +112,14 @@
     user-select:none;
   }
   #cart li button.remove {
-    background:#a33; border:none; color:white;
+    background:#880000; border:none; color:white;
     font-weight:bold; border-radius:6px;
     padding:.2rem .5rem; cursor:pointer;
     user-select:none;
     transition:background .3s ease;
   }
   #cart li button.remove:hover {
-    background:#d55;
+    background:#cc0000;
   }
   #cart .total {
     font-weight:800; font-size:1.2rem;
@@ -126,40 +127,40 @@
     color:#ff8a80;
   }
   #cart button#closeCart {
-    background:#b71c1c; border:none;
+    background:#d32f2f; border:none;
     width:100%; padding:.7rem;
     font-weight:900; border-radius:8px;
-    cursor:pointer; color:#ffcdd2;
+    cursor:pointer; color:#330000;
     user-select:none; transition:background .3s ease;
   }
   #cart button#closeCart:hover {
-    background:#7f0000;
+    background:#b71c1c;
   }
   #openCartBtn {
     position:fixed; top:65px; right:10px;
-    background:#b71c1c; color:#ffcdd2; border:none;
+    background:#d32f2f; color:#330000; border:none;
     padding:.7rem 1.1rem; font-weight:900;
     border-radius:8px; cursor:pointer;
     user-select:none; z-index:1200;
-    box-shadow:0 0 10px #7f0000;
+    box-shadow:0 0 10px #b71c1c;
   }
   #openCartBtn:hover {
-    background:#7f0000;
+    background:#b71c1c;
   }
   #pixPayment {
     margin-top:1rem; text-align:center;
-    color:#ffcdd2; user-select:none;
+    color:#ff8a80; user-select:none;
   }
   #pixPayment img {
     margin-top:.7rem; width:150px;
-    border-radius:12px; box-shadow:0 0 12px #4a0000;
+    border-radius:12px; box-shadow:0 0 12px #200000;
     cursor:pointer;
   }
   #pixPayment .pixKey {
     margin-top:.5rem; font-weight:800; cursor:pointer;
   }
   #pixPayment .pixKey:hover {
-    color:#ffaaaa;
+    color:#ff5252;
   }
   #whatsappLink {
     margin-top:.8rem; display:inline-block;
@@ -382,22 +383,18 @@
     });
     cartTotalEl.textContent = total.toFixed(2);
 
-    // Mostrar Pix e gerar QR code Pix dinâmico
     pixPayment.style.display = 'block';
     const pixPayload = gerarPayloadPix(pixKey, total.toFixed(2), 'Pagamento Israel Store');
     pixQR.src = `https://chart.googleapis.com/chart?cht=qr&chl=${encodeURIComponent(pixPayload)}&chs=200x200&choe=UTF-8&chld=L|2`;
     pixKeyEl.textContent = pixKey;
 
-    // Link whatsapp com mensagem automática
     const mensagem = encodeURIComponent(`Olá, já realizei o pagamento de R$ ${total.toFixed(2)} na Israel Store e quero receber meu pedido.`);
     whatsappLink.href = `https://wa.me/5551997097814?text=${mensagem}`;
   }
 
-  // Função para montar o payload Pix básico para gerar QR Code
+  // Geração simplificada do payload Pix para QR Code
   function gerarPayloadPix(chave, valor, descricao) {
-    function campo(id, valor) {
-      return id + String(valor.length).padStart(2, '0') + valor;
-    }
-    const merchantAccountInfo = campo('00', 'BR.GOV.BCB.PIX') + campo('01', chave);
-    let payload = '';
-    payload += campo('00
+    // Formata o valor para o padrão Pix: 2 casas decimais
+    const valorFormatado = Number(valor).toFixed(2);
+    // Monta o payload básico para um Pix sem campos extras complexos
+    return `00020126580014BR.GOV.BCB.PIX0114${chave.length.toString().padStart(2,'0')}${chave}0208${valorFormatado.length.toString().padStart(2,'0')}${valorFormatado}520400005303
